added scroll for form for small screens

--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,13 @@ body {
   font-size: 12px;
   background-color: #f2f0f9;;
   color: #6e6893;
+  
 }
 
 html {
   box-sizing: border-box;
   position: relative;
+  overflow: auto;
 }
 
 * {
